1). Adding mappers 2). Adding classes Dto 3). Adding services 4). Adding Controllers 5).

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,16 @@ spring.jpa.open-in-view = false
 #Actuator
 management.endpoints.web.exposure.include=health, info, metrics, beans, mappings
 
+#Actuator info
+info.app.name=Rental Car Application
+info.app.description=The application is a final project!
+info.app.version=1.0.0
+info.app.administrator.email=piotrekNaukaJavy@gmail.com
+info.app.owner.name=John
+info.app.owner.surname=Doe
+info.company.name=Rental Cars
+info.company.phone=7444892230
+
 #Email Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
