--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,3 +27,6 @@ spring.mail.username=piotrekNaukaJavy@gmail.com
 spring.mail.password=swinkiTrzy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ADMINISTRATION
+admin.mail = piotrekNaukaJavy@gmail.com
