--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/cars_rental?serverTimezone=Eur
 spring.datasource.username=rental_boss
 spring.datasource.password=rental_password
 spring.jpa.open-in-view = false
-
+autoReconnect=true
 #Actuator
 management.endpoints.web.exposure.include=health, info, metrics, beans, mappings
 
