1). improvement of builder-related classes 2). update ordered by parameters, not by the body

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,3 +30,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
 admin.mail = piotrekNaukaJavy@gmail.com
+
+#mapper.enable(DeserializationFeature.ACCEPT_EMPTY_STRING_AS_NULL_OBJECT);
