1). adding unit tests for controller: additionalEquipmentController 2). adding communication with OpenWeather 3). creating promotions in scheduler 4). adding method to change car prize in CarService and CarControllers 5). creating package weather.domain and creating classes for a response from     OpenWeather 6). addnig Resttemplate in CoreConfiguration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,13 +24,13 @@ info.company.phone=7444892230
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=piotrekNaukaJavy@gmail.com
-spring.mail.password=swinkiTrzy
+spring.mail.password=Golfik2005
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
 admin.mail=piotrekNaukaJavy@gmail.com
 
-#mapper.enable(DeserializationFeature.ACCEPT_EMPTY_STRING_AS_NULL_OBJECT);
-
-#@org.springframework.beans.factory.annotation.Autowired(required=true)
+#OpenWeather
+openWeather.api.endpoint.prod=http://api.openweathermap.org/data/2.5/forecast
+openWeather.api.key=6dd88192bb4643dac267d5d57bbed3d4
