--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,14 +1,15 @@
 #DATABASE CONFIGURATION
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.database=mysql
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 #spring.datasource.url=jdbc:mysql://localhost:3306/cars_rental?serverTimezone=Europe/Warsaw&useSSL=false&allowPublicKeyRetrieval=true
 #spring.datasource.username=rental_boss
 #spring.datasource.password=rental_password
-spring.jpa.open-in-view = false
-autoReconnect=true
+#spring.jpa.open-in-view = false
+#autoReconnect=true
 
 ##H2
+spring.jpa.hibernate.ddl-auto=update
 spring.h2.console.enabled=true
 #spring.h2.console.path=/h2
 ##Datasource
@@ -35,13 +36,13 @@ info.company.phone=7444892230
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=piotrekNaukaJavy@gmail.com
-spring.mail.password=swinkiTrzy
+spring.mail.password=Golfik2005
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
 admin.mail=piotrekNaukaJavy@gmail.com
 
-#mapper.enable(DeserializationFeature.ACCEPT_EMPTY_STRING_AS_NULL_OBJECT);
-
-#@org.springframework.beans.factory.annotation.Autowired(required=true)
+#OpenWeather
+openWeather.api.endpoint.prod=http://api.openweathermap.org/data/2.5/forecast
+openWeather.api.key=6dd88192bb4643dac267d5d57bbed3d4
