--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    compile('com.google.code.gson:gson:2.8.2')
     implementation ('org.springframework.boot:spring-boot-starter-actuator')
     implementation ('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation ('org.springframework.boot:spring-boot-starter-web')
