- database change to h2 - adding mockito in tests(AdditionalEquipmentServiceTest, CarServiceTest, InvoiceService)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,23 @@
 #DATABASE CONFIGURATION
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database=mysql
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.datasource.url=jdbc:mysql://localhost:3306/cars_rental?serverTimezone=Europe/Warsaw&useSSL=false&allowPublicKeyRetrieval=true
+#spring.datasource.username=rental_boss
+#spring.datasource.password=rental_password
+#spring.jpa.open-in-view = false
+#autoReconnect=true
+
+##H2
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/cars_rental?serverTimezone=Europe/Warsaw&useSSL=false&allowPublicKeyRetrieval=true
-spring.datasource.username=rental_boss
-spring.datasource.password=rental_password
-spring.jpa.open-in-view = false
-autoReconnect=true
+spring.h2.console.enabled=true
+#spring.h2.console.path=/h2
+##Datasource
+spring.datasource.url=jdbc:h2:mem:
+test_mem;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=sa
+spring.datasource.driver-class-name=org.h2.Driver
+
 #Actuator
 management.endpoints.web.exposure.include=health, info, metrics, beans, mappings
 
