--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     implementation ('org.springframework.boot:spring-boot-starter-mail:1.5.7.RELEASE')
     runtimeOnly ('com.h2database:h2')
     compileOnly (group: 'org.projectlombok', name: 'lombok', version: '1.18.6')
-    runtimeOnly ('mysql:mysql-connector-java')
+  //  runtimeOnly ('mysql:mysql-connector-java')
     annotationProcessor ("org.projectlombok:lombok:1.18.6")
     testImplementation ('org.springframework.boot:spring-boot-starter-test')
 }
